--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 h1 {
-  color: red;
+  color: red; /* color name */
+  color: rgb(0, 255, 0); /* 2byte整数表現 */
+  color: #0000ff; /* HEX表現 */
+  color: #00f; /* HEX表現で同値が並ぶ場合は省略可能 */
+  color: #333;
 }
