--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   /*
-  color属性
+  色
     色名
     2バイト10進数 rgb(r,g,b)
     2バイト16進数 #rrggbb
@@ -13,15 +13,15 @@ body {
   color: #333;
 
   /*
-  font-family属性
+  フォント
     インストール優先順に指定 フォント[, フォント]
   */
   font-family: Verdana, sans-serif;
 
   /*
-  margin属性
+  margin
     上下左右が同値の場合属性はmarginに集約できる
-    pxは省略できる
+    0pxはpxを省略できる
   */
   /* margin-top: 0px;
   margin-bottom: : 0px;
@@ -31,11 +31,32 @@ body {
 }
 
 header {
+  /* 背景色 */
   background-color: pink;
 }
 
 ul {
   margin: 0px;
+  /* リスト装飾 */
   list-style-type: none;
+  /* padding */
   padding-left: 0px;
+}
+
+li {
+  display: inline-block;
+  /*
+  padding
+  paddingやmarginは上下、左右が同値の場合集約できる
+    padding: 上下 左右
+  */
+  /* padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px; */
+  padding: 4px 8px;
+  /*
+  フォントサイズ
+  */
+  font-size: 12px;
 }
