--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,14 @@ section {
   text-align: center;
 }
 
-/* 複数の要素構造時のセレクタ */
+/*
+子セレクタ
+  parent > child parent直下のchild要素のみが対象
+*/
+/*
+子孫セレクタ
+  parent child parentツリー下全てのchild要素が対象
+*/
 section h1 {
   font-weight: normal;
   margin-bottom: 8px;
@@ -112,4 +119,19 @@ section h1 {
 section p{
   margin-top: 0px;
   font-size: 14px;
+}
+
+/*
+クラスセレクタ
+  .classname classnameを設定した全ての要素が対象
+  element.classname elementのclassnameのみが対象
+*/
+.icon {
+  /*
+  境界線を丸める
+    角の縦横2辺に対する放物
+    px, %でも指定可能。50%で正円
+  */
+  /* border-radius: 70px; */
+  border-radius: 50%;
 }
