--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,23 @@ section p{
 
 .works {
   width: 400px;
+  /* 余った余白を割り当てる=auto */
+  /* margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  margin-bottom: 60px; */
+  /* 上下　左右に省略 */
+  margin: 60px auto;
+  border-bottom: 1px solid gray;
 }
 
 /* 複数のセレクタに同じ属性を設定するにはカンマ区切り */
 .works h1,
 .works p {
   text-align: left;
+}
+
+/* .works直下のsection要素 */
+.works > section {
+  margin-bottom: 40px;
 }
