--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ header {
   margin-bottom: 60px;
 }
 
-ul {
+header ul {
   margin: 0px;
   /* リスト装飾 */
   list-style-type: none;
@@ -58,7 +58,7 @@ ul {
   padding-left: 0px;
 }
 
-li {
+header li {
   display: inline-block;
   /*
   padding
@@ -76,7 +76,7 @@ li {
   font-size: 12px;
 }
 
-a {
+header li > a {
   /*
   テキスト装飾(リンクの下線)
     none 無効
@@ -94,7 +94,7 @@ a {
     要素が特定の状態にある時
  */
  /* a要素にマウスが乗った時 */
- a:hover {
+ header li > a:hover {
    color: royalblue;
  }
 
@@ -171,4 +171,39 @@ section p{
 /* .works直下のsection要素 */
 .works > section {
   margin-bottom: 40px;
+}
+
+footer {
+  width: 400px;
+  /* マージン 上 左右 下 */
+  margin: 0px auto 60px;
+}
+
+
+footer ul {
+  margin: 0px;
+  /* リスト装飾 */
+  list-style-type: none;
+  /* padding */
+  padding-left: 0px;
+  float: left;
+}
+
+footer li {
+  display: inline-block;
+}
+
+footer li > a:hover {
+  /* 画像に対して透明度を指定 */
+  opacity: 0.6;
+}
+
+footer p {
+  color: lightgray;
+  font-size: 14px;
+  text-align: right;
+}
+
+.current {
+  border-bottom: 4px solid royalblue;
 }
